<resources>
    <string name="app_name">MinskKniga</string>

    <string-array name="price_spinner_client">
        <item>Розничная</item>
        <item>Оптовая</item>
    </string-array>

    <string-array name="price_spinner_provider">
        <item>Продажная</item>
        <item>Закупочная</item>
        <item>Оптовая</item>
    </string-array>

    <string-array name="dolg_spinner">
        <item>Нет долга</item>
        <item>Нам должны</item>
        <item>Мы должны</item>
    </string-array>

    <string-array name="status">
        <item>Новое</item>
        <item>Выполнено</item>
    </string-array>

    <string-array name="contacts">
        <item>Телефон</item>
        <item>E-mail</item>
        <item>Контактное лицо</item>
    </string-array>

    <string-array name="yesno">
        <item>Нет</item>
        <item>Да</item>
    </string-array>

    <string-array name="smena">
        <item>Смена не выбрана</item>
        <item>Первая смена</item>
        <item>Вторая смена</item>
    </string-array>

    <string name="title_activity_providers_list">ProvidersListActivity</string>
    <string name="title_activity_provider_zayavki_list">ProviderZayavkiListActivity</string>
    <string name="title_activity_description_zayavka">Инфо заявки</string>
    <string name="title_activity_description_zayavka_book">Инфо заявки</string>
    <string name="title_activity_new_provider_zayavka">Новая заявка</string>
    <string name="title_activity_rashod_order">Расходный ордер</string>
    <string name="title_activity_schet_operation">SchetOperation</string>

    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonClearMemory">MC</string>
    <string name="buttonAddToMemory">M+</string>
    <string name="buttonSubtractFromMemory">M-</string>
    <string name="buttonRecallMemory">MR</string>
    <string name="buttonSquareRoot">√</string>
    <string name="buttonSquared">x²</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonSine">sin</string>
    <string name="buttonCosine">cos</string>
    <string name="buttonTangent">tan</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_scheta_list">SchetaListActivity</string>
    <string name="title_activity_money_calculator">MoneyCalculatorActivity</string>
    <string name="title_activity_inventarizacia">InventarizaciaActivity</string>
    <string name="title_activity_inventarizacia_info">InventarizaciaInfoActivity</string>

    <!-- Error displayed when expression evaluates to NaN. [CHAR_LIMIT=14] -->
    <string name="error_nan">Not a number</string>
    <!-- Error displayed when expression contains a syntax error. [CHAR_LIMIT=14] -->
    <string name="error_syntax">Error</string>

    <!-- Abbrev. name of cosine function (e.g. "cos(π)". [CHAR_LIMIT=3] -->
    <string name="fun_cos">cos</string>
    <!-- Natural logarithm function (e.g. "ln(2)"). [CHAR_LIMIT=3] -->
    <string name="fun_ln">ln</string>
    <!-- Logarithm function (e.g. "log(10)"). [CHAR_LIMIT=3] -->
    <string name="fun_log">log</string>
    <!-- Abbrev. name of sine function (e.g. "sin(π)". [CHAR_LIMIT=3] -->
    <string name="fun_sin">sin</string>
    <!-- Abbrev. name of tangent function (e.g. "tan(π)". [CHAR_LIMIT=3] -->
    <string name="fun_tan">tan</string>

    <!-- Clear operation to clear the currently entered expression. [CHAR_LIMIT=3] -->
    <string name="clr">clr</string>
    <!-- Delete operation to remove last entered token. [CHAR_LIMIT=3] -->
    <string name="del">del</string>

    <!-- Content Descriptions -->
    <eat-comment />

    <!-- Content description for 'e' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_const_e">Euler\'s number</string>
    <!-- Content description for 'π' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_const_pi">pi</string>

    <!-- Content description for '.' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_dec_point">point</string>

    <!-- Content description for '(' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_lparen">left parenthesis</string>
    <!-- Content description for ')' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_rparen">right parenthesis</string>

    <!-- Content description for 'cos' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_cos">cosine</string>
    <!-- Content description for 'ln' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_ln">natural logarithm</string>
    <!-- Content description for 'log' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_log">logarithm</string>
    <!-- Content description for 'sin' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_sin">sine</string>
    <!-- Content description for 'tan' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_tan">tangent</string>

    <!-- Content description for '+' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_add">plus</string>
    <!-- Content description for '÷' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_div">divide</string>
    <!-- Content description for '!' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_perc">percentage</string>
    <!-- Content description for '×' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_mul">times</string>
    <!-- Content description for '^' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_pow">power</string>
    <!-- Content description for '√' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_sqrt">square root</string>
    <!-- Content description for '-' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_sub">minus</string>

    <!-- Content description for "clr" button. [CHAR_LIMIT=NONE] -->
    <string name="desc_clr">clear</string>
    <!-- Content description for "del" button. [CHAR_LIMIT=NONE] -->
    <string name="desc_del">delete</string>
    <!-- Content description for '=' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_eq">equals</string>
    <string name="title_activity_providers_zayavki_raschet">ProvidersZayavkiRaschetActivity</string>
    <string name="title_activity_return_to_sclad">Возврат на склад</string>
    <string name="title_activity_rangs">Таблица рангов</string>
    <string name="title_activity_prihod_order">PrihodOrder</string>
    <string name="title_activity_show_otgruzennoe">ShowOtgruzennoe</string>

</resources>
