<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Поставщики">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout

            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app.bar"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:tabIndicatorColor="@color/tab_indicator"
            app:tabSelectedTextColor="@android:color/background_dark"
            app:tabTextColor="@android:color/darker_gray" />
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appbar">



        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tab_layout" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/operation.calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/operation.txt"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorWhite"
            android:gravity="right"
            android:paddingLeft="16dp"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".12"
            android:visibility="gone">

            <Button
                android:id="@+id/buttonClearMemory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonClearMemory"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonAddToMemory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonAddToMemory"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonSubtractFromMemory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonSubtractFromMemory"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonRecallMemory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonRecallMemory"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".12">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_yellow"
                android:text="@string/buttonClear"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonToggleSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_yellow"
                android:text="@string/buttonToggleSign"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_yellow"
                android:text="@string/buttonDivide"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_yellow"
                android:text="@string/buttonMultiply"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".12">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"

                android:background="@drawable/border_white"
                android:text="@string/button7"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_white"
                android:text="@string/button8"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_white"
                android:text="@string/button9"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_yellow"
                android:text="@string/buttonSubtract"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".12">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_white"
                android:text="@string/button4"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_white"
                android:text="@string/button5"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_white"
                android:text="@string/button6"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_yellow"
                android:text="@string/buttonAdd"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".24"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".50"
                    android:textSize="25sp">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".325"
                        android:background="@drawable/border_white"
                        android:text="@string/button1"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".323"
                        android:background="@drawable/border_white"
                        android:text="@string/button2"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".325"
                        android:background="@drawable/border_white"
                        android:text="@string/button3"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".50">

                    <Button
                        android:id="@+id/button0"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".66"
                        android:background="@drawable/border_white"
                        android:text="@string/button0"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/buttonDecimalPoint"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".325"
                        android:background="@drawable/border_yellow"
                        android:text="@string/buttonDecimalPoint"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@drawable/border_yellow"
                android:text="@string/buttonEquals"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
